# evaluator

./: .gitignore  .puppeteerrc.js  README.md  angular.json  custom-webpack.config.js  database.db  evaluator.code-workspace  nx.json  package-lock.json  package.json  phantom.js  preload.js  tsconfig.base.json  tsconfig.worker.json
apps/api/phantomjs/: jest.config.ts  project.json
apps/evaluator/: .eslintrc.json  eval.ts  jest.config.ts  project.json  proxy.conf.json  puppeteer.ts  puppeteer.ts_  server.ts
apps/evaluator-backend/: jest.config.ts  project.json
apps/evaluator-e2e/: project.json
apps/evaluator/src/: index.html  main.ts  styles.scss
docker/: Dockerfile  docker-compose.yml
evaluator/: All-Live-BigCommerce-Sites.csv  All-Live-Magento-Sites.csv  All-Live-PrestaShop-Sites.csv  Cargo.toml  eval.template.js  pupet.js  test.csv
evaluator/src/: main.rs
libs/data-access/functions/: README.md  jest.config.ts  project.json
libs/data-access/puppeteer/: README.md  jest.config.ts  project.json
libs/feature/home/: project.json
libs/feature/logging/: README.md  jest.config.ts  project.json
libs/feature/results/: README.md  jest.config.ts  project.json
libs/feature/search-bar/: README.md  jest.config.ts  project.json
libs/shared/services/: project.json
libs/shared/types/: project.json
libs/ui/input/: jest.config.ts  project.json
libs/util/functions/: README.md  jest.config.ts  project.json
libs/util/hihlight-webworker/: project.json  tsconfig.lib.json
libs/util/puppeteer/: README.md  jest.config.ts  project.json
(+88 files in other folders)
