[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async = "*"
async-process = "*"
async-std = { version = "*", features = ["attributes"] }
clap = { version = "*", features = ["derive"] }
